# pysecurity1024

./: LICENSE  MANIFEST.in  README.md  amostras_readme.txt  plaintext.txt  pyproject.toml  pysecurity1024.py  requirements.txt  setup.py  test_generate_phrases.py  test_security.py
.github/workflows/: main.yml
docs/: Entropy.md
